<resources>
    <string name="app_name">Do_an</string>
<string name="leehamedical_corporation">LEEHAMEDICAL CORPORATION</string>
<string name="leeha">LEEHAMEDICAL</string>
<string name="has_you_covered">has you covered</string>
<string name="all_rights_reserved_by_lephiha">All rights reserved by LEEHAMEDICAL CORPORATION</string>
<string name="login_with_phone_number">Đăng nhập bằng số điện thoại</string>
<string name="vietnam_phone_prefix">+84</string>
<string name="get_authorization_code">Nhận mã xác thực</string>
<string name="or">Hoặc</string>
<string name="phone_number">Số điện thoại</string>
<string name="phone_number_2">Số điện thoại:</string>
<string name="my_phone_number">0392405600</string>
<string name="LeeHa_Medical_phone_number">0392.405.600 – 033.512.2341 (7h to 18h)</string>
<string name="enter_your_verification_code">Nhập mã xác minh của bạn</string>
<string name="confirm">Xác nhận</string>
<string name="verification_code">Mã xác thực</string>
<string name="do_not_let_phone_number_empty">Không để số điện thoại trống</string>
<string name="only_enter_number_except_first_zero">Chỉ nhập số trừ số 0 đầu tiên</string>
<string name="resend_verification_code">Gửi lại mã xác thực</string>
<string name="do_not_receive_verification_code_try_again">Không nhận được mã xác thực. Hãy thử lại!</string>
<string name="empty_phone_number_or_verificationId">Số điện thoại trống hoặc ID xác thực</string>
<string name="verification_failed">Xác thực không thành công!</string>
<string name="loading">Loading</string>
<string name="ok">OK</string>
<string name="success">Thành công</string>
<string name="add_account_info_successfully">Đã thêm thông tin tài khoản thành công</string>
<string name="cancel">Hủy bỏ</string>
<string name="attention">Chú ý</string>
<string name="oops_there_is_an_issue">Oops! Có một vấn đề</string>
<string name="login_successfully">Đăng nhập thành công</string>
<string name="login_failed">Đăng nhập thất bại</string>
<string name="login_with_google_successfully">Đăng nhập bằng google thành công</string>
<string name="check_your_internet_connection">Kiểm tra kết nối internet của bạn</string>
<string name="home">Trang chủ</string>
<string name="notification">Thông báo</string>
<string name="personality">Cá nhân</string>
<string name="appointment">Lịch khám bệnh</string>
<string name="are_you_sure_about_that">Bạn có chắc chắn về điều đó không?</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="what_do_you_want_to_search_today">What do you want to search today ?</string>
<string name="general_examination">Khám tổng quát</string>
<string name="heart_examination">Khám tim</string>
<string name="pregnant_examination">Khám thai kỳ</string>
<string name="covid19_examination">Xét nghiệm COVID-19</string>
<string name="medical_test_examination">Kiểm tra y tế</string>
<string name="tooth_examination">Khám răng</string>
<string name="chat_ai">Medical at home</string>
    <string name="call_video">Khám từ xa - Call video</string>
<string name="eye_examination">Khám mắt</string>
<string name="speciality_examination">Khám chuyên khoa</string>
<string name="popular_specialities">Chuyên khoa phổ biến</string>
<string name="read_more">Đọc thêm</string>
<string name="musculoskeletal">Cơ xương</string>
<string name="popular_doctors">Bác sĩ phổ biến</string>
<string name="default_doctor_name">Bác sĩ Lê Phi Hà</string>
<string name="default_speciality">General</string>
<string name="default_price">Giá: 1.896.000 VND</string>
<string name="app_description">Welcome to LeeHa Medical - The best health application in Việt Nam</string>
<string name="app_short_description">Welcome to LeeHa Medical</string>
<string name="it_is_your_turn">Đến lượt bạn rồi. Hãy sẵn sàng!</string>
<string name="leeha_medical_is_running_in_background">LeeHa Medical is running in background</string>
<string name="doctor_information">Thông tin bác sĩ</string>
<string name="doctor_name">Bác sĩ:</string>
<string name="default_personal_name">Lê Phi Hà</string>
<string name="speciality_name">Chuyên khoa:</string>
<string name="speciality">Chuyên khoa</string>
<string name="default_phone_number">0392405600</string>
<string name="working_process">Quy trình làm việc:</string>
<string name="default_description"><![CDATA[\<p>- Hướng dẫn đặt t&ecirc;n file b&aacute;o c&aacute;o định kỳ:</p>\n\n<p>&nbsp; &nbsp; ** Lớp (m&atilde; chữ)_M&atilde; sinh vi&ecirc;n(3 số cuối)_Họ v&agrave; t&ecirc;n _BCDK1</p>\n\n<p>VD: AT_069_LuongMinhTien_BCĐK1</p>\]]></string>
<string name="speciality_information">Thông tin chuyên khoa</string>
<string name="description">Mô tả:</string>
<string name="description2">Mô tả</string>
<string name="doctor">Bác sĩ</string>
<string name="all">All</string>
<string name="service">Dịch vụ</string>
<string name="image">Hình ảnh</string>
<string name="title_activity_servicepage">ServicepageActivity</string>
<string name="title_home">Home</string>
<string name="title_dashboard">Dashboard</string>
<string name="title_notifications">Thông báo</string>
<string name="service_information">Tổng quan về dịch vụ</string>
<string name="create_booking">Đặt lịch khám</string>
<string name="booking">Đặt lịch khám</string>
<string name="default_service_name">Xét nghiệm máu</string>
<string name="free_booking_fee">Miễn phí đặt khám</string>
<string name="bookingName">Họ tên người đặt lịch (Bắt buộc)</string>
<string name="bookingName2">Họ tên người đặt lịch</string>
<string name="bookingPhone">Số điện thoại đặt khám (Bắt buộc)</string>
<string name="bookingPhone2">Số điện thoại đặt khám </string>
<string name="patientName">Tên bệnh nhân (Bắt buộc)</string>
<string name="patientName2">Tên bệnh nhân</string>
<string name="male">Nam</string>
<string name="female">Nữ</string>
<string name="gender">Giới tính</string>
<string name="patientBirthday">Ngày sinh</string>
<string name="patientAddress">Địa chỉ</string>
<string name="patientReason">Lý do</string>
<string name="appointmentDate">Ngày hẹn (Bắt buộc)</string>
<string name="appointmentDate2">Ngày hẹn</string>
<string name="appointmentTime">Thời gian hẹn (Bắt buộc)</string>
<string name="appointmentTime2">Thời gian hẹn</string>
    <string name="please_fulfill_mandatory_information">Vui lòng điền đầy đủ thông tin để tiết kiệm thời gian làm thủ tục khám bệnh</string>
    <string name="note">Lưu ý</string>
    <string name="note_1">1. Thông tin bạn cung cấp sẽ được sử dụng làm hồ sơ khám bệnh, khi điền thông tin, vui lòng:</string>
    <string name="note_2">\t* Ghi rõ họ và tên, viết hoa chữ cái đầu, ví dụ: <b>Lê Phi Hà</b></string>
    <string name="note_3">\t* Điền đầy đủ và chính xác, vui lòng kiểm tra lại thông tin trước khi nhấn Xác nhận</string>
    <string name="note_4">2. Khi đến khám, vui lòng tuân thủ các quy định phòng chống dịch (đeo khẩu trang, sát khuẩn, khai báo dịch tễ).</string>
    <string name="note_5">Khi xác nhận đặt lịch, bạn hoàn toàn đồng ý với Điều khoản dịch vụ của chúng tôi.</string>
<string name="code_male">1</string>
<string name="code_female">0</string>
<string name="default_appointment_time">09:00</string>
    <string name="you_do_not_fill_mandatory_field_try_again">Bạn chưa cung cấp đầy đủ thông tin bắt buộc. Vui lòng kiểm tra lại!</string>
<string name="icon">ICON</string>
<string name="booking_successfully">Đặt khám thành công!</string>
    <string name="if_it_is_the_first_time_you_have_exam">Nếu bạn không biết quy trình khám sức khỏe tại LeeHa Medical. Nhấp vào nút bên dưới để xem hướng dẫn!</string>
    <string name="how_to_exam_in_leehamedical_health">Hướng dẫn khám sức khỏe tại LeeHaMedical Health</string>
<string name="open_with_google_map">Mở bằng Google Map</string>
<string name="medical_examination_guide">Hướng dẫn khám bệnh</string>
<string name="medical_examination_procedures">Thủ tục kiểm tra</string>
<string name="attention_patient">Ghi chú của bệnh nhân</string>
<string name="LeeHa_Medical_support_call_center">Tổng đài hỗ trợ y tế LeeHa</string>
<string name="note_medical">Dưới đây là <b>hướng dẫn và quy trình</b> dành cho khách hàng đặt lịch qua LeeHa Medical </string>
<string name="note_medical_1">1. Bạn đến Bệnh viện Trung ương Quân đội 108, <b>01 Trần Hưng Đạo, Phường Bạch Đằng, Quận Hai Bà Trưng, ​​Thành phố Hà Nội</b>(cơ sở khám chữa bệnh). Lưu ý nơi gửi xe
\n * Xe máy: bạn có thể gửi xe tại bãi gửi xe của bệnh viện
\n * Ô tô: bạn có thể yêu cầu bảo vệ chỉ cho bạn nơi gửi xe cách bệnh viện 150m
\n 2. Bạn đến quầy đăng ký và <b>báo lịch hẹn qua LeeHa Medical</b> để được hỗ trợ ưu tiên
</string>
    <string name="note_attention_1">
<b>Lưu ý về COVID-19</b>
\n * Khi đến khám, bệnh nhân cần kiểm tra nhiệt độ ngay khi vào cửa
\n * Trường hợp cần xét nghiệm, bệnh nhân nội trú và người nhà sẽ chăm sóc bệnh nhân
</string>
    <string name="note_attention_2">
<b>Lưu ý bệnh nhân cần mang theo giấy tờ tùy thân khi đến khám bệnh</b>
\n * Thẻ bảo hiểm y tế
\n * Thẻ bảo hiểm nhân thọ/phi nhân thọ
\n * Thẻ căn cước công dân đối với người lớn. Giấy khai sinh đối với trẻ em
</string>
<string name="default_datetime">2025-03-11 11:02:43</string>
<string name="notifications">Notifications</string>
<string name="mark_all_as_read">Đánh dấu tất cả đã đọc</string>
<string name="successful_action">Ca phẫu thuật đã thành công!</string>
<string name="at">at</string>
<string name="back">Back</string>
<string name="my_birthday">08-09-2002</string>
<string name="my_address">Bệnh viện Quân Y 103, Bệnh viện Quân y 103, Số 261 Đ. Phùng Hưng, P. Phúc La, Hà Đông, Hà Nội</string>
<string name="default_reason">Khám sức khỏe định kỳ</string>
<string name="bookingStatus">Trạng thái lịch </string>
<string name="processing">Đang xử lý</string>
<string name="you_do_not_any_appointment">Bạn không có cuộc hẹn nào sắp tới!</string>
<string name="default_room">Khu A, tầng 1, phòng 102</string>
<string name="default_position">Số khám của bạn: 1</string>
<string name="remind_me">Nhắc tôi</string>
<string name="done">Hoàn thành</string>
<string name="your_position">Số khám của bạn:</string>
<string name="your_reason">Lý do của bạn:</string>
<string name="you_will_get_notification_as_soon_as_your_turn">Bạn sẽ nhận được thông báo khi đến lượt bạn</string>
<string name="default_location">Khu A, tầng 1, phòng 112</string>
<string name="numericalOrder">Số lượt truy cập thứ tự</string>
<string name="appointment_information">Thông tin cuộc hẹn</string>
<string name="patient_numerical_order">Mã số bệnh nhân</string>
<string name="default_date">28-02-2025</string>
<string name="default_time">09:00</string>
<string name="appointmentStatus">Trạng thái cuộc hẹn</string>
<string name="watch_medical_record">Xem hồ sơ bệnh án </string>
<string name="watch_medical_treatment">Xem điều trị y tế </string>
<string name="you_can_read_again_in_settings"><![CDATA[Bạn có thể vào Cá nhân->Lịch sử y khoa để xem lại thông tin sau]]></string>
<string name="appointment_queue">Hàng đợi cuộc hẹn</string>
<string name="now">Bây giờ</string>
<string name="you">Bạn</string>
<string name="medical_record_information">Thông tin hồ sơ bệnh án</string>
<string name="statusBefore">Tình trạng trước điều trị</string>
<string name="default_status_before">Tình trạng sau điều trị</string>
<string name="reason">Chẩn đoán</string>
<string name="appointment_reason">Lý do hẹn khám</string>
<string name="statusAfter">Tình trạng sau điều trị</string>
<string name="default_datetime2">Ngày: 30-01-2025</string>
<string name="default_treatment_name">Tên: Thực phẩm bổ sung DutchLady</string>
<string name="default_treatment_type">Loại: Uống</string>
<string name="default_treatment_times">Số lần: 7</string>
<string name="default_treatment_purpose">Mục đích: bổ sung Vitamin</string>
<string name="default_treatment_instruction">Chỉ dẫn: Uống trước khi ăn và trước đi ngủ 2 viên/lần</string>
<string name="default_treatment_number">Số thứ tự 1</string>
<string name="numerical_order">Số thứ tự</string>
<string name="name">Tên</string>
<string name="times">Số lần</string>
</resources>